# pio-learning

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci_checks.yml
examples/: CMakeLists.txt  debug.h  output
examples/addition/: CMakeLists.txt  addition.c  addition.pio  main.rs
examples/clocked_input/: CMakeLists.txt  clocked_input.c  clocked_input.pio  main.rs
examples/differential_manchester/: CMakeLists.txt  differential_manchester.c  differential_manchester.pio  main.rs
examples/hello_pio/: CMakeLists.txt  hello.c  main.rs
examples/i2c/: CMakeLists.txt  i2c.pio  i2c_bus_scan.c  main.rs
examples/ir_nec/: CMakeLists.txt  ir_loopback.c  main.rs  nec_carrier_burst.pio  nec_carrier_control.pio  nec_receive.pio
examples/logic_analyser/: CMakeLists.txt  logic_analyser.c  main.rs
examples/manchester_encoding/: CMakeLists.txt  main.rs  manchester_encoding.c  manchester_encoding.pio
examples/pio_blink/: CMakeLists.txt  blink.c  blink.pio  main.rs
examples/pwm/: CMakeLists.txt  main.rs  pwm.c  pwm.pio
examples/quadrature_encoder/: CMakeLists.txt  main.rs  quadrature_encoder.c  quadrature_encoder.pio
examples/spi/: CMakeLists.txt  main.rs  spi.pio  spi_flash.c  spi_loopback.c
examples/squarewave/: CMakeLists.txt  main.rs  squarewave.c
examples/uart_helper/: main.rs
examples/uart_rx/: CMakeLists.txt  main.rs  uart_rx.c  uart_rx.pio  uart_rx_intr.c
examples/uart_tx/: CMakeLists.txt  main.rs  uart_tx.c
examples/ws2812/: CMakeLists.txt  main.rs  ws2812.c  ws2812.pio  ws2812_parallel.c
src/: lib.rs
