[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.0" }
defmt = "0.3"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
defmt-rtt = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.8"
pio-proc = "0.2.2"
pio = "0.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
heapless = { version = "0.8.0", features = ["defmt-03"]}
embedded-io = { version = "0.6.1", features = ["defmt-03"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
